; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_xsltutils.c_xsltSetGenericErrorFunc.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_xsltutils.c_xsltSetGenericErrorFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltGenericErrorContext = common dso_local global i8* null, align 8
@xsltGenericError = common dso_local global i32* null, align 8
@xsltGenericErrorDefaultFunc = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xsltSetGenericErrorFunc(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  store i8* %5, i8** @xsltGenericErrorContext, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  store i32* %9, i32** @xsltGenericError, align 8
  br label %12

10:                                               ; preds = %2
  %11 = load i32*, i32** @xsltGenericErrorDefaultFunc, align 8
  store i32* %11, i32** @xsltGenericError, align 8
  br label %12

12:                                               ; preds = %10, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
